<resources>
    <string name="app_name">Notes App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered</string>
    <string name="register">Register</string>
    <string name="not_registered1">Not Registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="note_title">Note Title</string>
    <string name="text">Text</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title_activity_note_details">NoteDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>