<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">



    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/username"
        />



        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:ems="5"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword" />




    <Button
        android:id="@+id/button_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#32a852"
        android:text="@string/login"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:text="@string/not_registered1" />
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/register"
            />
    </LinearLayout>
</LinearLayout>
